[package]
name = "jvxvcrqvn"
version = "0.1.0"
authors = ["Mary Knize <maryknize@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.*"
router = "*"
reqwest = { version = "0.10", features = ["json", "blocking"] }
