[package]
name = "jvxvcrqvn"
version = "0.1.0"
authors = ["Mary Knize <maryknize@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.*"
router = "*"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde_json = "1.0"
percent-encoding = "2.1"
scraper = "0.12"
tera = "1.5"
regex = "1"
